# gltron

./: .gitignore  CHANGELOG  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  FindMikMod.cmake  INSTALL  MENU_FIXES.md  Makefile  Makefile.linux  Makefile.win32  README-Android.md  TODO  android_audio_adapter.c  android_audio_settings.c  android_gles_adapter.c  android_glue.c  android_glue.h  android_input_adapter.c  android_main.c  android_resolution_manager.c  android_settings_menu.c  backend_mikmod.c  backend_openmpt_android.c  build-android.sh  cmake_install.cmake  computer.c  config.h  engine.c  file.c  fixed_menu.c  fonts.c  fonttex.c  fonttex.h  game_mouse.c  gamegraphics.c  globals.c  globals.h  gltron  gltron.c  (+35 more)
android/: CMakeLists.txt  android.toolchain.cmake  android_audio_adapter.c  android_audio_settings.c  android_gles_adapter.c  android_main.c  android_resolution_manager.c  android_settings_menu.c
android-dependencies/openmpt/common/: ComponentManager.d  ComponentManager.test.d  Logging.d  Logging.test.d  Profiler.d  Profiler.test.d  mptFileType.d  mptFileType.test.d  mptPathString.d  mptPathString.test.d  mptRandom.d  mptRandom.test.d  mptStringBuffer.d  mptStringBuffer.test.d  mptTime.d  mptTime.test.d  serialization_utils.d  serialization_utils.test.d  version.d  (+1 more)
android/jni/: Android.mk  Application.mk
art/: CMakeLists.txt
base/: util.c
cmake/: ConfigHeader.cmake  FindSDL2_mixer.cmake  config.h.in  gltron-config.h.in
configuration/: settings.c
data/: CMakeLists.txt
filesystem/: dirsetup.c  path.c
game/: 32bit_warning.c  game_data.h  globals.c
glew/: CMakeLists.txt
include/: Nebu_filesystem.h  Nebu_scripting.h  android_audio.h  android_config.h  android_resolution.h  android_settings_menu.h  input_constants.h
include/base/: nebu_assert.h  nebu_callbacks.h  nebu_debug_memory.h  nebu_math.h  nebu_png_texture.h  nebu_resource.h  nebu_system.h  nebu_types.h  nebu_util.h  nebu_vector.h
include/game/: game.h
include/input/: nebu_input_system.h
include/scripting/: nebu_scripting.h
include/video/: nebu_2d.h  nebu_console.h  nebu_font.h  nebu_mesh.h  nebu_renderer_gl.h  nebu_video_types.h  video.h
levels/: CMakeLists.txt
lib3ds/: CMakeLists.txt  cmake_install.cmake  lib3dsConfig.cmake
lua5/: CMakeLists.txt  cmake_install.cmake  lapi.c  lstring.c
music/: CMakeLists.txt
nebu/: CMakeLists.txt  cmake_install.cmake
nebu/audio/: CMakeLists.txt  SoundSystem.cpp  Source3D.cpp  SourceCopy.cpp  SourceMusic.cpp  SourceSample.cpp  audio_system.c  cmake_install.cmake
nebu/base/: CMakeLists.txt  cmake_install.cmake  nebu_math.c  resource.c  system.c
nebu/filesystem/: CMakeLists.txt  filesystem.c
nebu/include/GL/: extgl.h
nebu/include/audio/: nebu_SoundSystem.h  nebu_Source.h  nebu_Source3D.h  nebu_SourceEngine.h  nebu_SourceMusic.h  nebu_SourceSample.h
nebu/include/base/: nebu_callbacks.h  nebu_resource.h  nebu_system.h  nebu_util.h
nebu/include/filesystem/: nebu_filesystem.h
nebu/include/input/: nebu_input_system.h  nebu_system_keynames.h
nebu/include/video/: nebu_font.h  nebu_geometry.h  nebu_gl.h  nebu_mesh.h  nebu_renderer_gl.h  nebu_video_system.h  nebu_video_utility.h
nebu/input/: CMakeLists.txt  cmake_install.cmake  custom_keys.c  input_system.c
nebu/scripting/: CMakeLists.txt  cmake_install.cmake  scripting.c
nebu/system/: CMakeLists.txt  nebu_system_callbacks.c  nebu_system_swap_buffers.c
nebu/video/: 2d.c  CMakeLists.txt  benchmark.c  console.c  extgl.c  font.c  light.c  mesh.c  mesh_3ds.cpp  nebu_video_system.c  texture2d.c  vector.c  video_system.c  video_system_android.c  video_utility.c
scripts/: CMakeLists.txt  android_touch.lua  audio.lua  basics.lua  check_music.lua  direct_music_player.lua  force_music.lua  main.lua  menu.lua  menu_music.lua  menu_music_continuity.lua  music_functions.lua  play_music.lua  save.lua  sdl2_compat.lua  test_music.lua
sounds/: CMakeLists.txt
src/: CMakeLists.txt  cmake_install.cmake  gltron.c
src/audio/: CMakeLists.txt  audio_diagnostic.c  sound.c  sound_glue.cpp  sound_stubs.c
src/base/: CMakeLists.txt  cmake_install.cmake  sdl_compat.c  sdl_compat_globals.c  setcallback.c  util.c
src/configuration/: CMakeLists.txt  cmake_install.cmake  platform_settings.c  settings.c  settings.h  touch_settings.c
src/filesystem/: CMakeLists.txt  dirsetup.c  installpath.c  path.c
src/game/: CMakeLists.txt  c_setcallback.c  callbacks.c  camera.c  cmake_install.cmake  credits.c  embedded_processing.c  embedded_scripts.c  engine.c  event.c  game.c  game_level.c  gui.c  gui_missing.c  init.c  init_stubs.c  input.c  level.c  menu.c  menu.h  pause.c  resource.c  scripting.c  scripting_interface.c  switchCallbacks.c  timedemo.c  touch_interface.c
src/include/: gltron-config.h
src/include/audio/: audio.h
src/include/base/: sdl_compat.h  switchCallbacks.h
src/include/configuration/: platform_settings.h  settings.h  touch_settings.h
src/include/filesystem/: path.h
src/include/game/: camera.h  data.h  game.h  game_data.h  game_level.h  gltron.h  gui.h  init.h  menu.h  pause.h  resource.h
src/include/input/: input.h
src/include/scripting/: embedded_processing.h  embedded_scripts.h  lua_compat.h  scripting.h
src/include/video/: graphics_utility.h  model.h  nebu_video_system.h  shader_manager.h  shader_utils.h  skybox.h  texture.h  video.h  video_level.h
src/input/: CMakeLists.txt  cmake_install.cmake  event_stub.c  input.c
src/scripting/: CMakeLists.txt  embedded_scripts.h  scripting.h
src/video/: CMakeLists.txt  artpack.c  explosion.c  fonts.c  gamegraphics.c  graphics_hud.c  graphics_utility.c  gui_stub.c  level.c  material.c  model.c  nebu_video_system.c  recognizer.c  screenshot.c  shader_manager.c  shader_utils.c  skybox.c  trail_render.c  trails_buffered.c  video.c  video_shaders.c
tools/: build_android_apk.sh  build_openmpt_android_arm64.sh  configure_examples.sh  minimal-classes.dex
tools/cmake/openmpt-wrapper/: CMakeLists.txt
tools/staging/: AndroidManifest.xml
tools/toolchains/: x86_64-linux-gnu.cmake
video/: level.c  trails_buffered.c  video.c
(+309 files in other folders)
